examples/test/testpolicy18439.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18439
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key43: value2
      key47: value25
      key8: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value7
      podSelector:
        matchLabels:
          key26: value17
          key20: value9
